--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ node_js: '8'
 
 cache:
   directories:
-    - "node_modules"
+    - node_modules
 env:
   matrix:
   - PROVIDER=amazon
+  - PROVIDER=azure
 before_install:
 - npm install -g serverless
 script:
 - cp -R functions $PROVIDER/
 - cd $PROVIDER
+- npm install
 - sls deploy
