--- a/azure/serverless.yml
+++ b/azure/serverless.yml
@@ -1,21 +1,4 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
-service: azure-nodejs # NOTE: update this with your service name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
+service: azure-nodejs
 
 provider:
   name: azure
@@ -24,18 +7,9 @@ provider:
 plugins:
   - serverless-azure-functions
 
-# you can add packaging information here
-#package:
-#  include:
-#    - include-me.js
-#    - include-me-dir/**
-#  exclude:
-#    - exclude-me.js
-#    - exclude-me-dir/**
-
 functions:
-  hello:
-    handler: handler.hello
+  hello128:
+    handler: handler.hello128
     events:
       - http: true
         x-azure-settings:
@@ -44,6 +18,47 @@ functions:
         x-azure-settings:
           direction: out
           name: res
+  hello256:
+    handler: handler.hello256
+    events:
+      - http: true
+        x-azure-settings:
+          authLevel : anonymous
+      - http: true
+        x-azure-settings:
+          direction: out
+          name: res
+  hello512:
+    handler: handler.hello512
+    events:
+      - http: true
+        x-azure-settings:
+          authLevel : anonymous
+      - http: true
+        x-azure-settings:
+          direction: out
+          name: res
+  hello1024:
+    handler: handler.hello1024
+    events:
+      - http: true
+        x-azure-settings:
+          authLevel : anonymous
+      - http: true
+        x-azure-settings:
+          direction: out
+          name: res
+  hello2048:
+    handler: handler.hello2048
+    events:
+      - http: true
+        x-azure-settings:
+          authLevel : anonymous
+      - http: true
+        x-azure-settings:
+          direction: out
+          name: res
+    
 
 # The following are a few examples of other events you can configure:
 #
