--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ env:
   - PROVIDER=amazon
   - PROVIDER=azure
 before_install:
-- npm install -g serverless
+- npm install -g serverless serverless-azure-functions
 script:
 - cp -R functions $PROVIDER/
 - cd $PROVIDER
-- npm install
+- npm i
 - sls deploy
