--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: node_js
 node_js: '8'
-
 sudo: required
-
 cache:
   directories:
-    - node_modules
+  - node_modules
 env:
   matrix:
   - PROVIDER=amazon
   - PROVIDER=azure
+  - PROVIDER=google
+  - PROVIDER=ibm
 before_install:
+- openssl aes-256-cbc -K $encrypted_73f9e7942726_key -iv $encrypted_73f9e7942726_iv
+  -in client-secret.json.enc -out client-secret.json -d
 - sudo apt-get install libsecret-1.dev
 - npm update -g
 - npm install -g serverless
