--- a/google/serverless.yml
+++ b/google/serverless.yml
@@ -1,17 +1,14 @@
-service: gcf-nodejs # NOTE: Don't put the word "google" in here
+service: gcf-nodejs
 
 provider:
   name: google
   runtime: nodejs
   project: my-project
-  # the path to the credentials file needs to be absolute
-  credentials: ~/.gcloud/keyfile.json
+  credentials: ../client-secret.json
 
 plugins:
   - serverless-google-cloudfunctions
 
-# needs more granular excluding in production as only the serverless provider npm
-# package should be excluded (and not the whole node_modules directory)
 package:
   exclude:
     - node_modules/**
@@ -19,27 +16,28 @@ package:
     - .git/**
 
 functions:
-  first:
-    handler: http
+  hello128:
+    handler: hello128
     events:
       - http: path
-
-  # NOTE: the following uses an "event" event (pubSub event in this case).
-  # Please create the corresponding resources in the Google Cloud
-  # before deploying this service through Serverless
-
-  #second:
-  #  handler: event
-  #  events:
-  #    - event:
-  #        eventType: providers/cloud.pubsub/eventTypes/topic.publish
-  #        resource: projects/*/topics/my-topic
-
-# you can define resources, templates etc. the same way you would in a
-# Google Cloud deployment configuration
-#resources:
-#  resources:
-#    - type: storage.v1.bucket
-#      name: my-serverless-service-bucket
-#  imports:
-#    - path: my_template.jinja
+    memorySize: 128
+  hello256:
+    handler: hello256
+    events:
+      - http: path
+    memorySize: 256
+  hello512:
+    handler: hello512
+    events:
+      - http: path
+    memorySize: 512
+  hello1024:
+    handler: hello1024
+    events:
+      - http: path
+    memorySize: 1024
+  hello2048:
+    handler: hello2048
+    events:
+      - http: path
+    memorySize: 2048
