--- a/google/serverless.yml
+++ b/google/serverless.yml
@@ -3,8 +3,8 @@ service: gcf-nodejs
 provider:
   name: google
   runtime: nodejs
-  project: my-project
-  credentials: ../client-secret.json
+  project: tesis-gcl
+  credentials: ../key.json
 
 plugins:
   - serverless-google-cloudfunctions
