--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ env:
 before_install:
 - openssl aes-256-cbc -K $encrypted_73f9e7942726_key -iv $encrypted_73f9e7942726_iv
   -in key.json.enc -out key.json -d
-- sudo apt-get install libsecret-1.dev
-- npm update -g
-- npm install -g serverless
+# - sudo apt-get install libsecret-1.dev
+# - npm update -g
+# - npm install -g serverless
 script:
 - cp -R functions $PROVIDER/
 - cd $PROVIDER
