--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,6 @@ language: node_js
 node_js: '8'
 sudo: required
 
-env:
-  matrix:
-  - PROVIDER=amazon
-  - PROVIDER=azure
-  - PROVIDER=google
-  - PROVIDER=ibm
 before_install:
 - openssl aes-256-cbc -K $encrypted_73f9e7942726_key -iv $encrypted_73f9e7942726_iv
   -in key.json.enc -out key.json -d
@@ -15,12 +9,25 @@ before_install:
 - npm update -g
 - npm install -g serverless
 
+env:
+  - amazon
+  - azure
+  - ibm
+  - google
 
+
+
+matrix:
+  - PROVIDER=amazon/node
+  - PROVIDER=amazon/python
+  # - PROVIDER=azure
+  # - PROVIDER=google
+  # - PROVIDER=ibm
 script:
-- cp -R functions $PROVIDER/
-- cd $PROVIDER
-- npm i
-- sls deploy
+  - cp -R functions $PROVIDER/
+  - cd $PROVIDER
+  - npm i
+  - sls deploy
 
 cache:
   directories:
