--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,20 @@ before_install:
   -in key.json.enc -out key.json -d
 - sudo apt-get install libsecret-1.dev
 - npm update -g
-- npm install -g serverless
+- npm install -g serverless 
 
 matrix:
-  - PROVIDER=amazon/node
-  - PROVIDER=amazon/python
+  - PROVIDER=amazon
+  # - PROVIDER=amazon/python
   # - PROVIDER=azure
   # - PROVIDER=google
   # - PROVIDER=ibm
+env:
+  - BUILD_DIR=node
+  - BUILD_DIR=python
 script:
   - cp -R functions $PROVIDER/
-  - cd $PROVIDER
+  - cd $PROVIDER/$BUILD_DIR
   - npm i
   - sls deploy
 
