--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
 #   - BUILD_DIR=node
 #   - BUILD_DIR=python
 script:
-  - cp -R functions $PROVIDER/
+  - sudo cp -R functions $PROVIDER/
   # - cd $PROVIDER/$BUILD_DIR/
   # - npm i
   # - sls deploy
