--- a/ibm-ml/serverless.yml
+++ b/ibm-ml/serverless.yml
@@ -1,29 +1,34 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
+service: openwhisk-python
 
-service: openwhisk-python # NOTE: update this with your service name
-
-# Remember to install project dependencies to register the provider plugin.
-# $ npm install
 provider:
   name: openwhisk
   runtime: python
 
+package:
+  exclude: 
+    - node_modules
+    - requirements.txt
+    - Readme.md
+    - .gitignore
+    - package.json
+
+plugins:
+  - serverless-offline-python
+  - serverless-python-requirements
+
+
+custom:
+  pythonRequirements:
+    zip: true
+
 functions:
   hello:
     handler: handler.hello
+    annotations:
+      web-export: true
+    events:
+      - http: GET /ml
+    memory: 512
 
-# extend the framework using plugins listed here:
-# https://github.com/serverless/plugins
 plugins:
   - serverless-openwhisk
